FlutterCompiler/src/antlr/dartParser.java
// Generated from java-escape by ANTLR 4.11.1

    package antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class dartParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, NEW=69, RETURN=70, IF=71, ELSE=72, FOR=73, WHILE=74, 
		CLASS=75, TYPE=76, COLOR=77, ID=78, STRING=79, BOOL=80, INT=81, FLOAT=82, 
		SINGLE_LINE_COMMENT=83, MULTI_LINE_COMMENT=84, WS=85, AND=86, OR=87;
	public static final int
		RULE_prog = 0, RULE_widget_class = 1, RULE_class = 2, RULE_meth = 3, RULE_stat = 4, 
		RULE_decl = 5, RULE_assign = 6, RULE_if = 7, RULE_for = 8, RULE_while = 9, 
		RULE_functionCall = 10, RULE_objectFunctionCall = 11, RULE_declareObject = 12, 
		RULE_instanObject = 13, RULE_cond = 14, RULE_expression = 15, RULE_widget = 16, 
		RULE_navigator = 17, RULE_scaffold = 18, RULE_appBar = 19, RULE_body = 20, 
		RULE_listView = 21, RULE_inkWell = 22, RULE_row = 23, RULE_column = 24, 
		RULE_text = 25, RULE_image = 26, RULE_separatedlistView = 27, RULE_container = 28, 
		RULE_material = 29;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "widget_class", "class", "meth", "stat", "decl", "assign", "if", 
			"for", "while", "functionCall", "objectFunctionCall", "declareObject", 
			"instanObject", "cond", "expression", "widget", "navigator", "scaffold", 
			"appBar", "body", "listView", "inkWell", "row", "column", "text", "image", 
			"separatedlistView", "container", "material"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'extends'", "'StatelessWidget'", "'{'", "'@override'", "'Widget'", 
			"'build'", "'('", "'BuildContext'", "'context'", "')'", "';'", "'}'", 
			"','", "'print'", "'='", "'<'", "'<='", "'>'", "'>='", "'.'", "'=='", 
			"'!='", "'*'", "'/'", "'+'", "'-'", "'Navigator.push'", "'MaterialPageRoute'", 
			"'builder'", "':'", "'=>'", "'Scaffold'", "'appBar'", "'body'", "'AppBar'", 
			"'title'", "'ListView'", "'children'", "'['", "']'", "'InkWell'", "'onTap'", 
			"'child'", "'Row'", "'Column'", "'Text'", "'style'", "'TextStyle'", "'color'", 
			"'Colors.'", "'fontSize'", "'Image'", "'image'", "'AssetImage'", "'width'", 
			"'height'", "'ListView.separated'", "'itemBuilder'", "'index'", "'separatorBuilder'", 
			"'itemCount'", "'Container'", "'double'", "'infinity'", "'Colors'", "'grey'", 
			"'MaterialApp'", "'home'", "'new'", "'return'", "'if'", "'else'", "'for'", 
			"'while'", "'class'", null, null, null, null, null, null, null, null, 
			null, null, "'&&'", "'||'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "NEW", "RETURN", 
			"IF", "ELSE", "FOR", "WHILE", "CLASS", "TYPE", "COLOR", "ID", "STRING", 
			"BOOL", "INT", "FLOAT", "SINGLE_LINE_COMMENT", "MULTI_LINE_COMMENT", 
			"WS", "AND", "OR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public dartParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	 
		public ProgContext() { }
		public void copyFrom(ProgContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ProgContext {
		public List<Widget_classContext> widget_class() {
			return getRuleContexts(Widget_classContext.class);
		}
		public Widget_classContext widget_class(int i) {
			return getRuleContext(Widget_classContext.class,i);
		}
		public List<MethContext> meth() {
			return getRuleContexts(MethContext.class);
		}
		public MethContext meth(int i) {
			return getRuleContext(MethContext.class,i);
		}
		public List<ClassContext> class_() {
			return getRuleContexts(ClassContext.class);
		}
		public ClassContext class_(int i) {
			return getRuleContext(ClassContext.class,i);
		}
		public ProgramContext(ProgContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dartListener ) ((dartListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dartListener ) ((dartListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartVisitor ) return ((dartVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			_localctx = new ProgramContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la - 75)) & ~0x3f) == 0 && ((1L << (_la - 75)) & 11L) != 0) {
				{
				setState(63);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(60);
					widget_class();
					}
					break;
				case 2:
					{
					setState(61);
					meth();
					}
					break;
				case 3:
					{
					setState(62);
					class_();
					}
					break;
				}
				}
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Widget_classContext extends ParserRuleContext {
		public Widget_classContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_widget_class; }
	 
		public Widget_classContext() { }
		public void copyFrom(Widget_classContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class WidgetClassContext extends Widget_classContext {
		public TerminalNode CLASS() { return getToken(dartParser.CLASS, 0); }
		public TerminalNode ID() { return getToken(dartParser.ID, 0); }
		public TerminalNode RETURN() { return getToken(dartParser.RETURN, 0); }
		public WidgetContext widget() {
			return getRuleContext(WidgetContext.class,0);
		}
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public WidgetClassContext(Widget_classContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dartListener ) ((dartListener)listener).enterWidgetClass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dartListener ) ((dartListener)listener).exitWidgetClass(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartVisitor ) return ((dartVisitor<? extends T>)visitor).visitWidgetClass(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Widget_classContext widget_class() throws RecognitionException {
		Widget_classContext _localctx = new Widget_classContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_widget_class);
		int _la;
		try {
			_localctx = new WidgetClassContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(CLASS);
			setState(69);
			match(ID);
			setState(70);
			match(T__0);
			setState(71);
			match(T__1);
			setState(72);
			match(T__2);
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TYPE) {
				{
				{
				setState(73);
				decl();
				}
				}
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(79);
			match(T__3);
			setState(80);
			match(T__4);
			setState(81);
			match(T__5);
			setState(82);
			match(T__6);
			setState(83);
			match(T__7);
			setState(84);
			match(T__8);
			setState(85);
			match(T__9);
			setState(86);
			match(T__2);
			setState(87);
			match(RETURN);
			setState(88);
			widget();
			setState(89);
			match(T__10);
			setState(90);
			match(T__11);
			setState(91);
			match(T__11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassContext extends ParserRuleContext {
		public ClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class; }
	 
		public ClassContext() { }
		public void copyFrom(ClassContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ClassesContext extends ClassContext {
		public TerminalNode CLASS() { return getToken(dartParser.CLASS, 0); }
		public TerminalNode ID() { return getToken(dartParser.ID, 0); }
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public List<MethContext> meth() {
			return getRuleContexts(MethContext.class);
		}
		public MethContext meth(int i) {
			return getRuleContext(MethContext.class,i);
		}
		public ClassesContext(ClassContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dartListener ) ((dartListener)listener).enterClasses(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dartListener ) ((dartListener)listener).exitClasses(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartVisitor ) return ((dartVisitor<? extends T>)visitor).visitClasses(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassContext class_() throws RecognitionException {
		ClassContext _localctx = new ClassContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_class);
		int _la;
		try {
			_localctx = new ClassesContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(CLASS);
			setState(94);
			match(ID);
			setState(95);
			match(T__2);
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TYPE || _la==ID) {
				{
				setState(98);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(96);
					decl();
					}
					break;
				case 2:
					{
					setState(97);
					meth();
					}
					break;
				}
				}
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(103);
			match(T__11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MethContext extends ParserRuleContext {
		public MethContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_meth; }
	 
		public MethContext() { }
		public void copyFrom(MethContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class MethodContext extends MethContext {
		public List<TerminalNode> ID() { return getTokens(dartParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(dartParser.ID, i);
		}
		public TerminalNode RETURN() { return getToken(dartParser.RETURN, 0); }
		public List<TerminalNode> TYPE() { return getTokens(dartParser.TYPE); }
		public TerminalNode TYPE(int i) {
			return getToken(dartParser.TYPE, i);
		}
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public WidgetContext widget() {
			return getRuleContext(WidgetContext.class,0);
		}
		public MethodContext(MethContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dartListener ) ((dartListener)listener).enterMethod(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dartListener ) ((dartListener)listener).exitMethod(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartVisitor ) return ((dartVisitor<? extends T>)visitor).visitMethod(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethContext meth() throws RecognitionException {
		MethContext _localctx = new MethContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_meth);
		int _la;
		try {
			_localctx = new MethodContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			_la = _input.LA(1);
			if ( !(_la==TYPE || _la==ID) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(106);
			match(ID);
			setState(107);
			match(T__6);
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TYPE || _la==ID) {
				{
				{
				setState(108);
				_la = _input.LA(1);
				if ( !(_la==TYPE || _la==ID) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(109);
				match(ID);
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__12) {
					{
					{
					setState(111);
					match(T__12);
					setState(112);
					_la = _input.LA(1);
					if ( !(_la==TYPE || _la==ID) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					setState(113);
					match(ID);
					}
					}
					setState(118);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(121);
			match(T__9);
			setState(122);
			match(T__2);
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__13 || (((_la - 69)) & ~0x3f) == 0 && ((1L << (_la - 69)) & 693L) != 0) {
				{
				{
				setState(123);
				stat();
				}
				}
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(129);
			match(RETURN);
			setState(132);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__6:
			case ID:
			case STRING:
			case BOOL:
			case INT:
			case FLOAT:
				{
				setState(130);
				expression(0);
				}
				break;
			case T__31:
			case T__34:
			case T__36:
			case T__40:
			case T__43:
			case T__44:
			case T__45:
			case T__51:
			case T__56:
			case T__66:
				{
				setState(131);
				widget();
				}
				break;
			case T__10:
				break;
			default:
				break;
			}
			setState(134);
			match(T__10);
			setState(135);
			match(T__11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatContext extends ParserRuleContext {
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
	 
		public StatContext() { }
		public void copyFrom(StatContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PrintOutputContext extends StatContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<FunctionCallContext> functionCall() {
			return getRuleContexts(FunctionCallContext.class);
		}
		public FunctionCallContext functionCall(int i) {
			return getRuleContext(FunctionCallContext.class,i);
		}
		public List<ObjectFunctionCallContext> objectFunctionCall() {
			return getRuleContexts(ObjectFunctionCallContext.class);
		}
		public ObjectFunctionCallContext objectFunctionCall(int i) {
			return getRuleContext(ObjectFunctionCallContext.class,i);
		}
		public PrintOutputContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dartListener ) ((dartListener)listener).enterPrintOutput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dartListener ) ((dartListener)listener).exitPrintOutput(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartVisitor ) return ((dartVisitor<? extends T>)visitor).visitPrintOutput(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ForStatContext extends StatContext {
		public ForContext for_() {
			return getRuleContext(ForContext.class,0);
		}
		public ForStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dartListener ) ((dartListener)listener).enterForStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dartListener ) ((dartListener)listener).exitForStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartVisitor ) return ((dartVisitor<? extends T>)visitor).visitForStat(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AssignStatContext extends StatContext {
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public AssignStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dartListener ) ((dartListener)listener).enterAssignStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dartListener ) ((dartListener)listener).exitAssignStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartVisitor ) return ((dartVisitor<? extends T>)visitor).visitAssignStat(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DeclareStatContext extends StatContext {
		public DeclContext decl() {
			return getRuleContext(DeclContext.class,0);
		}
		public DeclareStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dartListener ) ((dartListener)listener).enterDeclareStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dartListener ) ((dartListener)listener).exitDeclareStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartVisitor ) return ((dartVisitor<? extends T>)visitor).visitDeclareStat(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IfStatContext extends StatContext {
		public IfContext if_() {
			return getRuleContext(IfContext.class,0);
		}
		public IfStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dartListener ) ((dartListener)listener).enterIfStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dartListener ) ((dartListener)listener).exitIfStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartVisitor ) return ((dartVisitor<? extends T>)visitor).visitIfStat(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CallingFunctionStatContext extends StatContext {
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public CallingFunctionStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dartListener ) ((dartListener)listener).enterCallingFunctionStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dartListener ) ((dartListener)listener).exitCallingFunctionStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartVisitor ) return ((dartVisitor<? extends T>)visitor).visitCallingFunctionStat(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CallingFuncitonFromObjectStatContext extends StatContext {
		public ObjectFunctionCallContext objectFunctionCall() {
			return getRuleContext(ObjectFunctionCallContext.class,0);
		}
		public CallingFuncitonFromObjectStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dartListener ) ((dartListener)listener).enterCallingFuncitonFromObjectStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dartListener ) ((dartListener)listener).exitCallingFuncitonFromObjectStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartVisitor ) return ((dartVisitor<? extends T>)visitor).visitCallingFuncitonFromObjectStat(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InstantiatingObjectStatContext extends StatContext {
		public InstanObjectContext instanObject() {
			return getRuleContext(InstanObjectContext.class,0);
		}
		public InstantiatingObjectStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dartListener ) ((dartListener)listener).enterInstantiatingObjectStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dartListener ) ((dartListener)listener).exitInstantiatingObjectStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartVisitor ) return ((dartVisitor<? extends T>)visitor).visitInstantiatingObjectStat(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class WhileStatContext extends StatContext {
		public WhileContext while_() {
			return getRuleContext(WhileContext.class,0);
		}
		public WhileStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dartListener ) ((dartListener)listener).enterWhileStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
